<resources>
    <string name="app_name">PrivacyLibDemo</string>
    <string name="button_change_value">Apply Noise</string>
    <string name="just_a_test_for_custom_view">Just a test for custom view</string>
    <string name="edit_text_with_clear">Edit Text with Clear</string>
    <string name="initial_value">initial value</string>
    <string name="checkbox">CheckBox</string>
    <string name="portrait">portrait</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="your_current_selection_default">Your current Selection: Red</string>
    <string name="your_current_selection">Your current Selection: %s</string>
    <string name="select_your_favorite_color">Select your favorite Color</string>
    <string name="vote">Vote</string>
    <string name="anonymize">Anonymize</string>
    <string name="user_input">User Input:</string>
    <string name="sample_sentense">Testing of the word stemming mechanism</string>
    <string name="stemmed_result">Stemmed Result</string>
    <string name="evaluate_checkbox">Evaluate Checkbox</string>
    <string name="evaluation_result">Evaluation Result:</string>
</resources>