<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rg_constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RadioGroupDemoFragment">

    <at.fhj.ims.privacylib.components.AnonRadioGroup
        android:id="@+id/colorGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:accuracy="0.7"
        app:layout_constraintBottom_toTopOf="@+id/evalSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/red"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/green"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yellow"
            android:textSize="20sp" />
    </at.fhj.ims.privacylib.components.AnonRadioGroup>

    <Button
        android:id="@+id/evalSelection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote"
        app:layout_constraintBottom_toTopOf="@+id/tv_current_selection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorGroup" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/select_your_favorite_color"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toTopOf="@+id/colorGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_current_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_current_selection_default"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/evalSelection" />

</androidx.constraintlayout.widget.ConstraintLayout>