<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="at.fhj.ims.privacylibdemo.MainActivityViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="@{() -> viewModel.changeRandomValue()}"
            android:text="@string/button_change_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dpEditText" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{String.valueOf(viewModel.currentRandomValue)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
            tools:text="Dummy Data" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="207dp"
            android:layout_height="85dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/initial_value"
            android:inputType="number"
            android:text="@={viewModel.seedValue}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextWithClear" />

        <at.fhj.ims.privacylib.components.EditTextDP
            android:id="@+id/dpEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="number"
            android:text="@string/just_a_test_for_custom_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            tools:text="Custom Edit Text" />

        <at.fhj.ims.privacylib.components.EditTextWithClear
            android:id="@+id/editTextWithClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:inputType="number"
            android:text="@string/edit_text_with_clear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Edit Text with Clear" />

        <at.fhj.ims.privacylib.components.AnonNumber
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            custom:epsilon="0.7"
            custom:sensitivity="0.9" />

        <at.fhj.ims.privacylib.components.AnonCheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"
            android:text="@string/checkbox"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            custom:accuracy="0.5" />

        <at.fhj.ims.privacylib.components.AnonImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/portrait"
            android:src="@drawable/snowden_portrait"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            custom:blurfactor="2.0"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>