<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="at.fhj.ims.privacylibdemo.viewmodel.BasicsDemoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:onClick="@{() -> viewModel.changeRandomValue()}"
            android:text="@string/button_change_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="8"
            android:text="@{String.valueOf(viewModel.currentRandomValue)}"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
            tools:text="Dummy Data" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="207dp"
            android:layout_height="85dp"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="8"
            android:hint="@string/initial_value"
            android:inputType="number"
            android:text="@={viewModel.seedValue}"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <at.fhj.ims.privacylib.components.NumberAnonymizer
            android:id="@+id/anonNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            custom:epsilon="0.7"
            custom:precision="3"
            custom:sensitivity="0.9" />

        <at.fhj.ims.privacylib.components.AnonCheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/anonNumber"
            custom:accuracy="0.8" />

        <Button
            android:id="@+id/evalCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/evaluate_checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkBox" />

        <TextView
            android:id="@+id/evalResultLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/evaluation_result"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/evalCheckbox" />

        <TextView
            android:id="@+id/evalResult"
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:textColor="#AA00FF"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/evalResultLabel"
            app:layout_constraintTop_toBottomOf="@+id/evalCheckbox" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>